bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
    dormir=false
          ^SleepIn:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (weekday) {
  ^